--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       </div>
     </div>
   </div>
-  <div id="footer">Copyright © <span id="year"></span> Maciej Bąba
+  <div id="footer"><p>Copyright © <span id="year"></span> Maciej Bąba
     <a href="https://github.com/maciek367" target="_blank">
       <i class="fa fa-github" style="font-size: 24px;"></i>
-    </a>
+    </a></p>
   </div>
 </div>
 </body>
